# codexProxy

./: .gitignore  API-FORMAT-REFERENCE.md  CLAUDE.md  CODEBUDDY.md  INIT.md  README.md  build-app.sh  checkList.md  checkTest.md  claude-proxy-debug.js  codex-proxy-anthropic.js  codex-proxy-anthropic.js.backup  codex-proxy-openai-compatible.js  codex-proxy-test.py  codex-proxy.js  codex-request.json  config.json  findings.md  progress.md  task_plan.md  test_complete.py  test_image_handling.py  test_image_request_format.py  test_small_image.js
.claude/: settings.local.json
.claude/plans/: auto-write-config-plan.md
.codegraph/: daemon.pid
.github/workflows/: release.yml
.omc/: project-memory.json
.omc/sessions/: 488b5b72-8d4d-4326-b7f3-fff3ccac1589.json
.wolf/: anatomy.md  buglog.json  cerebrum.md  cron-state.json  identity.md  memory.md  token-ledger.json
.wolf/hooks/: _session.json
backup/: codex-proxy-anthropic.js  run-proxy.sh
fronted/: index.html  package-lock.json  package.json
fronted-tauri/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
fronted-tauri/src/: App.vue  style.css
fronted-tauri/src-tauri/: Cargo.toml  task_plan.md  tauri.conf.json
fronted-tauri/src-tauri/capabilities/: default.json
fronted-tauri/src-tauri/icons/: icon.icns
fronted-tauri/src-tauri/src/: main.rs  proxy.rs
fronted-tauri/src/bridge/: configBridge.ts
fronted-tauri/src/i18n/: en.ts  index.ts  zh.ts
fronted/electron/: main.ts  preload.ts
fronted/src/: App.vue  vite-env.d.ts
frontend/: index.html  package.json
frontend/src/: main.js
issue/: fix_commentary_phase_overflow_20260222_081856.txt  todos.md
main/: Cargo.toml  test_logging  test_logging.rs
main/scripts/: generate_replay_fixture.py
main/src/: instructions.txt  lib.rs  logger.rs  server.rs  transform.rs
main/src/load_balancer/: mod.rs
main/src/models/: anthropic.rs  common.rs  mod.rs
main/src/prompts/: mod.rs  teammate.md
main/src/server/: stream_decision.rs
main/src/transform/: anthropic.rs  baseline.rs  codex.rs  gemini.rs  mod.rs  openai.rs  processor.rs  shared.rs  tool_router.rs  unified.rs
main/src/transform/codex/: backend.rs  mod.rs  plan_mode_prompt.txt  request.rs  response.rs
main/src/transform/codex/response/: tests.rs
main/src/transform/codex/response/tests/: background_launch_suppression.rs  commentary_phase.rs  reasoning_and_skills.rs  request_payload.rs  text_hygiene.rs  thinking_stream.rs  tool_leak_stream.rs  upstream_event_compat.rs
main/src/transform/providers/: mod.rs
main/tests/: load_balancer_test.rs  test_logging.rs
test/: TESTING_PROXY.md  proxy_tests.py
(+98 files in other folders)
