[package]
name = "codex-proxy-core"
version = "0.0.4"
edition = "2021"
description = "Core proxy library for Codex Proxy - converts Anthropic Messages API to Codex Responses API"
authors = ["J1aDong"]
license = "MIT"

[[bin]]
name = "codex-proxy-server"
path = "src/bin/server.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
tokio-stream = "0.1"
bytes = "1"
chrono = "0.4"
env_logger = "0.11"
log = "0.4"
