[package]
name = "codex-proxy-desktop"
version = "0.3.2"
description = "Desktop configuration UI for Codex Proxy"
authors = ["J1aDong"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
# The app only uses plain HTTP fetches and does not rely on persisted cookies.
# Disabling default features avoids cookie-jar initialization on app startup.
tauri-plugin-http = { version = "2", default-features = false, features = ["rustls-tls", "http2", "charset", "macos-system-configuration"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
futures-util = "0.3"

# 引用核心代理库
codex-proxy-core = { path = "../../main" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
